fix(Modal)：提升 Modal 的 z-index

--- a/src/modal/style/modal.scss
+++ b/src/modal/style/modal.scss
@@ -1,6 +1,7 @@
 @import '../../style/theme';
 
 .algae-ui-modal {
+  z-index: 101;
   position: fixed;
   min-width: 20em;
   border-radius: 4px;
@@ -9,6 +10,7 @@
   background: $bg;
   box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.75);
   &-mask {
+    z-index: 100;
     position: fixed;
     left: 0;
     top: 0;
